versioned_docs/version-8.6.2/sdks/capacitor/add-sdk.md
---
description: "Add the Scandit Data Capture SDK to your Capacitor project: dependencies, license key, and camera permissions."
sidebar_position: 1
toc_max_heading_level: 4
pagination_next: null
framework: capacitor
keywords:
  - capacitor
---

# Installation

This page describes how to integrate the Scandit Data Capture SDK into your Capacitor project.

## Prerequisites

- Capacitor Version 5-7 [and other related tools and dependencies](https://capacitorjs.com/docs/getting-started).
- A project with:
  - minimum iOS deployment target of 15.0 or higher
  - an Android project with target SDK version 24 (Android 7, Nougat) or higher
- A valid Scandit Data Capture SDK license key. You can sign up for a free [test account](https://ssl.scandit.com/dashboard/sign-up?p=test&utm%5Fsource=documentation).

:::tip
Android devices running the Scandit Data Capture SDK need to have a GPU or the performance will drastically decrease.
:::

### Internal Dependencies

import InternalDependencies from '../../partials/get-started/_internal-deps-no-label-capture.mdx';

<InternalDependencies/>

## Get a License Key

1. [Sign up](https://ssl.scandit.com/dashboard/sign-up?p=test) or [Sign in](https://ssl.scandit.com/dashboard/sign-in) to your Scandit account
2. Create a project
3. Create a license key

If you have a paid subscription, please reach out to [Scandit Support](mailto:support@scandit.com) if you need a new license key.

## Add the SDK

Currently we support adding the Scandit Data Capture SDK Capacitor plugins to your project in two ways. The simplest way is to use the npm registry, alternatively you can manually download the plugins and add them to your project.

:::note
You should always make sure to add the scandit-capacitor-datacapture-core plugin, as all other plugins depend on it.
:::

### Create a new project

If you do not have a Capacitor project yet that you’ll use, you should create a new one.

```sh
npx cap init
npx cap add ios
npx cap add android
```

### Add the SDK from npm

To add Scandit plugins via npm, run the corresponding commands from your project’s root folder.

In the following snippet we’re adding multiple plugins for different functionalities, but you can add only the ones you need as described in the [Internal Dependencies](#internal-dependencies) section.

```sh
yarn add scandit-capacitor-datacapture-core
yarn add scandit-capacitor-datacapture-barcode
yarn add scandit-capacitor-datacapture-parser
yarn add scandit-capacitor-datacapture-id
```

:::note
You can also specify a version `@<version>`.
:::

### Add the SDK manually

After you download the [archive](https://ssl.scandit.com/dashboard/downloads) containing all the plugins, unzip the archive. It includes the available Capacitor plugins, including the `scandit-capacitor-datacapture-core` plugin that all other plugins depend on.

First add the `scandit-capacitor-datacapture-core` plugin:

```sh
yarn add <path to scandit-capacitor-datacapture-core plugin>
```

Once this is done, you can continue with adding the plugin(s) for your desired functionality:

```sh
yarn add <path to scandit-capacitor-datacapture-barcode plugin>
yarn add <path to scandit-capacitor-datacapture-parser plugin>
yarn add <path to scandit-capacitor-datacapture-id plugin>
```

### Update the project

After adding the plugins, you'll want to make sure they're added to your project properly.

**For iOS, first set up Scandit's private CocoaPods repository:**

**Important:** This project uses Scandit's private CocoaPods repository. First-time setup:

```sh
# Add Scandit's private CocoaPods repository (one-time setup)
pod repo add scandit-private-specs https://github.com/Scandit/scandit-cocoapods-specs.git
```

Then sync your project:

```sh
# iOS
npx cap sync

# Android
npx cap update android
npx cap sync
```

:::note
The public CocoaPods trunk repository is becoming read-only. Scandit has migrated to a private CocoaPods specs repository to ensure continued support and updates for iOS framework integrations. The repository is publicly accessible at https://github.com/Scandit/scandit-cocoapods-specs.

**Troubleshooting**: If you encounter issues:
- Verify the repo is added: `pod repo list | grep scandit-private-specs`
- Update the repo: `pod repo update scandit-private-specs`
:::

## Additional Information

### Android Configuration

On Android, the Scandit SDK uses content providers to initialize the scanning capabilities properly. If your own content providers depend on the Scandit SDK, choose an **initOrder** lower than 10 to make sure the SDK is ready first.

If not specified, **initOrder** is zero by default and you have nothing to worry about.

Check [the official `<provider>` documentation](https://developer.android.com/guide/topics/manifest/provider-element).

### Camera Permissions

When using the Scandit Data Capture SDK you will want to set the camera as the frame source for various capture modes. The camera permissions are handled by the plugins, so you don’t need to specify anything explicitly.

import OSSLicense from '../../partials/_third-party-licenses-js.mdx';

<OSSLicense/>
